--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,6 +1,6 @@
 {
     "@@locale": "de",
-    "title": "Die Taschenpiano",
+    "title": "Klaviermusik lernen",
     "@title": {},
     "sustain": "Anschlag",
     "@sustain": {},
