--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
     "@@locale": "en",
-    "title": "The Pocket Piano",
+    "title": "Learn Piano Music",
     "@title": {},
     "sustain": "Sustain",
     "@sustain": {},
