--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,6 +1,6 @@
 {
     "@@locale": "es",
-    "title": "El piano de bolsillo",
+    "title": "aprender música de piano",
     "@title": {},
     "sustain": "Sostenimiento",
     "@sustain": {},
