--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,6 +1,6 @@
 {
     "@@locale": "fr",
-    "title": "Le Piano de Poche",
+    "title": "Apprendre la musique pour piano",
     "@title": {},
     "sustain": "Suspension",
     "@sustain": {},
