--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -1,6 +1,6 @@
 {
     "@@locale": "ja",
-    "title": "ポケットピアノ",
+    "title": "ピアノ音楽を学ぶ",
     "@title": {},
     "sustain": "サステイン",
     "@sustain": {},
