--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -1,6 +1,6 @@
 {
     "@@locale": "ko",
-    "title": "포켓 피아노",
+    "title": "피아노 음악 배우기",
     "@title": {},
     "sustain": "서스테인",
     "@sustain": {},
