--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,6 +1,6 @@
 {
     "@@locale": "ru",
-    "title": "Карманный фортепиано",
+    "title": "Изучите фортепианную музыку",
     "@title": {},
     "sustain": "Стойка",
     "@sustain": {},
