--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -1,6 +1,6 @@
 {
     "@@locale": "zh",
-    "title": "口袋钢琴",
+    "title": "学习钢琴音乐",
     "@title": {},
     "sustain": "延音",
     "@sustain": {},
